2010-03-03 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDate.m: Fix last change to conform to coding standards.
	* Source/NSCalendarDate.m: Fix last change to avoid attempts to
	access beyond the end of the format string.

2010-03-03 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/ObjectiveC2/runtime.c: Fix class data copying functions to
	match OSX.
	* Source/Additions/GSObjCRuntime.m: Implement adding classes using
	new runtime functions.

2010-03-03 Doug Simons <dpsimons@testplant.com>

	* Source/NSDate.m: Fix natural language date parsing to handle AM/PM.
	* Source/NSCalendarDate.m: Fix to %I (12-hour clock) to show midnight
	hour as 12, not 00. Skip over field widths while parsing in init.

2010-03-03 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/ObjectiveC2/runtime.c: Bugfixes for getting superclass and
	for adding ivars to a class.
	* Source/Additions/GSObjCRuntime.m: Rewrite class creation code in
	terms of the new runtime api.

2010-03-01 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Additions/GNUstepBase/behavior.h:
	* Source/Additions/behavior.m:
	* Source/Additions/GNUmakefile:
	Remove obsolete, unused, and long deprecated code.
	The functinality is still present in GSObjCRuntime.[hm]

2010-03-01 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSObjCRuntime.h:
	* Source/NSObjCRuntime.m:
	Fix NSGetSizeAndAlignment() update argument types to match lates OSX

2010-02-28 Richard Frith-Macdonald <rfm@gnu.org>

	Update header files with further changes for non-fragile-abi.
	Also fixup some GSObjCRuntime.m functions for using the new runtime
	API.

2010-02-28 Thomas Gamper <icicle@cg.tuwien.ac.at>

	* runtime.c:
	Backport another one of David's fixes for @synchronize(class), all
	necessary flags now are set in objc_allocateMetaClass.

2010-02-27 Richard Frith-Macdonald <rfm@gnu.org>

	* runtime.c:
	* sync.m:
	* runtime.h:
	Backport David's fixes for @synchronize(class), suitably modified to
	build with older compilers.
